examples/bad/type7.swifty
//arrays of references are not allowed
func foo(a:Array of &int) {
   print a
}

foo()
